modify url and add log